HOP-4042 : Create a new execution information platform (pipelines)